fix: fixed visual layout shift.

--- a/src/components/UI/Carousel/Carousel/styles.scss
+++ b/src/components/UI/Carousel/Carousel/styles.scss
@@ -15,6 +15,7 @@
     left: 0px;
 
     height: 100%;
+    width: 300%;
 
     background-image: url(../../../../assets/img/bg.png);
     background-size: 100% 100%;
